@@ -14,6 +14,8 @@ Stalker Pyramid Changes
 * **New:** Hierarchical names of the task are added to Task Tool Tip window.
 * **New:** Hierarchical names of the task are added to Create/Update TimeLog
   dialog.
+* **Update:** In the summary page of Task update dialog is called based on
+  task entity type.
 
 
 pre 0.1.0.b1
